@@ -15,21 +15,22 @@ public class HabrCareerParse {
     public static final String SUFFIX = "&q=Java%20developer&type=all";
 
     public static void main(String[] args) throws IOException {
-        int pageNumber = 1;
-        HabrCareerDateTimeParser timeParser = new HabrCareerDateTimeParser();
-        String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, pageNumber, SUFFIX);
-        Connection connection = Jsoup.connect(fullLink);
-        Document document = connection.get();
-        Elements rows = document.select(".vacancy-card__inner");
-        rows.forEach(row -> {
-           Element titleElement = row.select(".vacancy-card__title").first();
-           Element dateElement = row.select(".vacancy-card__date").first();
-           String dateString = dateElement.child(0).attr("datetime");
-           LocalDateTime date = timeParser.parse(dateString);
-           Element linkElement = titleElement.child(0);
-           String vacancyName = titleElement.text();
-           String link = String.format("%s%s", SOURCE_LINK, linkElement.attr("href"));
-           System.out.printf("%s %s %s%n", date, vacancyName, link);
-        });
+        for (int pageNumber = 1; pageNumber <= 5; pageNumber++) {
+            HabrCareerDateTimeParser timeParser = new HabrCareerDateTimeParser();
+            String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, pageNumber, SUFFIX);
+            Connection connection = Jsoup.connect(fullLink);
+            Document document = connection.get();
+            Elements rows = document.select(".vacancy-card__inner");
+            rows.forEach(row -> {
+                Element titleElement = row.select(".vacancy-card__title").first();
+                Element dateElement = row.select(".vacancy-card__date").first();
+                String dateString = dateElement.child(0).attr("datetime");
+                LocalDateTime date = timeParser.parse(dateString);
+                Element linkElement = titleElement.child(0);
+                String vacancyName = titleElement.text();
+                String link = String.format("%s%s", SOURCE_LINK, linkElement.attr("href"));
+                System.out.printf("%s %s %s%n", date, vacancyName, link);
+            });
+        }
     }
 }
